# eftui

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  llms.txt  main.py  pyproject.toml  requirements.txt
tests/: test_controller.py  test_frontier_renderer.py  test_optimizer.py  test_price_loader.py  test_prompts.py
vietfrontier/: __init__.py  bootstrap.py  controller.py  models.py
vietfrontier/renderers/: __init__.py  frontier_renderer.py
vietfrontier/services/: __init__.py  optimizer.py  price_loader.py
vietfrontier/ui/: __init__.py  prompts.py  report.py
